1. Modify SMS 2.x installation script for Ubuntu, 2. Add stronger cipher settings to Nginx configuration templates.

--- a/nginx/centos/sms-server.conf.template
+++ b/nginx/centos/sms-server.conf.template
@@ -76,7 +76,7 @@ server {
 #  ssl_protocols TLSv1.2 TLSv1.3; 
 #  ssl_session_cache shared:SSL:1m;
 #  ssl_session_timeout  10m;
-#  ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !SHA1 !SHA256 !SHA384 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
+#  ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384 EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !SHA1 !SHA256 !SHA384 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
 #  ssl_prefer_server_ciphers on;
 #  ssl_dhparam /etc/nginx/dhparam.pem;
 #
@@ -122,7 +122,7 @@ server {
   ssl_protocols TLSv1.2 TLSv1.3; 
   ssl_session_cache shared:SSL:1m;
   ssl_session_timeout  10m;
-  ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !SHA1 !SHA256 !SHA384 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
+  ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384 EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !SHA1 !SHA256 !SHA384 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
   ssl_prefer_server_ciphers on;
   ssl_dhparam /etc/nginx/dhparam.pem;
 
